--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Únete como Administrador - Servidor de Discord</title>
+  <title>Únete como Admin - Servidor de Discord</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,42 +11,39 @@
     <div class="banner">
       <img src="Welcome!(1).png" alt="¡Bienvenido al servidor!">
       <h1>¡Te estamos buscando!</h1>
-      <p>¿Querés formar parte del equipo de admins/mods de nuestro servidor?</p>
-      <p>Completá el formulario y postulate ahora.</p>
+      <p>¿Querés ser parte del equipo de admins/mods?</p>
+      <p>Completá el formulario y postulate.</p>
     </div>
 
     <div class="form-container">
       <form action="https://formspree.io/f/mwpolyzr" method="POST">
-        <label for="username">Nombre de usuario en Discord:</label>
+        <label for="username">Usuario de Discord:</label>
         <input type="text" id="username" name="username" placeholder="ej: pepe" required />
 
-        <label for="experience">¿Tenés experiencia en moderación?</label>
+        <label for="experience">¿Tenés experiencia?</label>
         <select id="experience" name="experience" required>
           <option value="">Seleccionar</option>
           <option value="yes">Sí</option>
           <option value="no">No</option>
         </select>
 
-        <label for="bots">¿Tenés experiencia con bots de moderación? ¿Cuáles?</label>
+        <label for="bots">¿Usaste bots? ¿Cuáles?</label>
         <textarea id="bots" name="bots" rows="2" required></textarea>
 
-        <label for="motivation">¿Por qué querés ser admin?</label>
-        <textarea id="motivation" name="motivation" rows="3" required></textarea>
-
-        <label for="time">¿Cuánto tiempo pasás en Discord por día?</label>
+        <label for="time">¿Cuánto usás Discord por día?</label>
         <textarea id="time" name="time" rows="1" required></textarea>
 
-        <label for="harassment">¿Qué harías si un miembro se siente acosado por otro?</label>
+        <label for="harassment">¿Qué harías si alguien acosa a otro?</label>
         <textarea id="harassment" name="harassment" rows="2" required></textarea>
 
-        <label for="available">¿Estás disponible para emergencias?</label>
+        <label for="available">¿Estás para emergencias?</label>
         <select id="available" name="available" required>
           <option value="">Seleccionar</option>
           <option value="yes">Sí</option>
           <option value="no">No</option>
         </select>
 
-        <label for="rules">¿Vas a aceptar y hacer cumplir las reglas?</label>
+        <label for="rules">¿Aceptás las reglas?</label>
         <select id="rules" name="rules" required>
           <option value="">Seleccionar</option>
           <option value="yes">Sí</option>
@@ -61,9 +58,10 @@
       <p>Unite a nuestro servidor oficial:</p>
       <a href="https://discord.gg/NdrnGFajAk" target="_blank">Servidor Oficial</a>
 
-      <p>Si sos admin, accedé al servidor exclusivo para administradores:</p>
-      <a href="https://discord.gg/prwxStrnA2" target="_blank">Servidor Solo Admins</a>
+      <p>Si sos admin, entrá al servidor exclusivo:</p>
+      <a href="https://discord.gg/prwxStrnA2" target="_blank">Solo Admins</a>
     </div>
   </div>
 </body>
 </html>
+
